--- a/styles/main.css
+++ b/styles/main.css
@@ -48,11 +48,15 @@ i {
 }
 
 .links > a {
-    padding: 0.15em 0.5em 0.15em 0.5em;
+    padding: 0.5% 2% 0.5% 2%;
     text-decoration: none;
     color: #444444;
 }
 
 .links > a:visited {
     color: #444444;
+}
+
+#about_me {
+    padding-bottom: 5em;
 }
